--- a/examples/capture_hid_report/CMakeLists.txt
+++ b/examples/capture_hid_report/CMakeLists.txt
@@ -11,5 +11,5 @@ target_sources(${target_name} PRIVATE
 target_link_options(${target_name} PRIVATE -Xlinker --print-memory-usage)
 target_compile_options(${target_name} PRIVATE -Wall -Wextra)
 
-target_link_libraries(${target_name} PRIVATE pico_stdlib pico_multicore pico_pio_usb)
+target_link_libraries(${target_name} PRIVATE pico_stdlib pico_multicore pico_pio_usb pico_stdio_uart)
 pico_add_extra_outputs(${target_name})
